# goodplace_backend

./: .env.template  .gitignore  .gitlab-ci.yml  Dockerfile  GoodPlace .postman_collection.json  Procfile  aerich.ini  docker-compose.yml  pyproject.toml  readme.md  setup.cfg
good_place/: main.py
good_place/apis/: utils.py
good_place/apis/v1/: __init__.py  auth.py  categories.py  items.py  locations.py  login.py  users.py
good_place/core/: security.py  settings.py
good_place/crud/: categories.py  conditions.py  images.py  items.py  locations.py  users.py
good_place/crud/helpers/: utils.py
good_place/db/: utils.py
good_place/db/custom/: custom_countquery.py  custom_queryset.py
good_place/db/models/: __init__.py  categories.py  conditions.py  images.py  items.py  locations.py  users.py
good_place/db/models/fields/: ts_vector_field.py
good_place/schemas/: categories.py  conditions.py  images.py  items.py  locations.py  users.py
good_place/scripts/: initial_values_DB.sql  pre-commit.sh  schemathesis.sh
migrations/: README.md
migrations/models/: 0_20210104170813_init.sql  2_20210127203814_None.sql  3_20210130152504_add_icon_image_categories.sql  4_20210131103904_location_delete_trigger.sql  5_20210131233642_text_search.sql
tests/: conftest.py  test_temp.py  utils.py
tests/datasets/: dataset_categories.py  dataset_conditions.py  dataset_image.py  dataset_items.py  dataset_locations.py  dataset_users.py
tests/fixtures/: db.py
tests/integration/api/v1/: test_integration_users.py
tests/schemathesis/: test_schemathesis.py
